# hdfs-jni

./: .gitignore  Cargo.toml  README.md  build.rs
dev/: build-hdfs-jni.sh  build-set-env.sh  test.sh
dev-support/: diff.sh
dev/docker/: hdfs-jni.dockerfile  hdfs.dockerfile  rust.dockerfile
src/: dfs.rs  err.rs  lib.rs  minidfs.rs  native.rs  util.rs
