[package]
name = "hdfs"
description = "libhdfs binding library and safe Rust APIs"
version = "0.0.4"
authors = [ "Hyunsik Choi <hyunsik.choi@gmail.com>" ]
license = "Apache-2.0"
edition = "2018"

keywords = ["hdfs", "hadoop"]
documentation = "http://hyunsik.github.io/hdfs-rs/"
homepage = "https://github.com/hyunsik/hdfs-rs"
repository = "https://github.com/hyunsik/hdfs-rs.git"
readme = "README.md"

build = "build.rs"

[lib]
name = "hdfs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
log = "0.4"
url = "2"
thiserror = "1"

[build-dependencies]
cc = "1.0"
